packages/ui/tests/fixtures/negative/self-next-node-environment-extension-html.fixture.ts
import "@deepwork/ui";
import "next/server";
import "node:fs";
import "./missing-extension";

void process.env.FIXTURE_ONLY;
void dangerouslySetInnerHTML;
